# ocr-emnist

./: .gitignore  README.md  main.py  pyproject.toml
checkpoints/cnn-gru-ctc-v1-ocr-system/: checkpoint_5_epoch_98_acc.pt
notebooks/: cnn-gru-ctc-v2-ocr-system.ipynb
src/: configs.py  dataset.py  models.py  train_task.py  utils.py
